--- a/Components/Toogle/Toogle.css
+++ b/Components/Toogle/Toogle.css
@@ -9,17 +9,16 @@ h4{
         display: block;
     }
     .openMenu h4{
-        font-size: 30px;
         color: rgb(2 6 23);;
     }
     .openMenu{
-        width: 360px;
+        width: 100%;
         font-size: 20px;
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 40px;
         position: absolute;
-        top: 40px;
+        top: 0px;
         background: #fff;
         color: black;
         box-shadow: 2px 2px 16px #b4b4b446;
@@ -32,6 +31,7 @@ h4{
     .openMenu a{
         color: black;
         text-decoration: none;
+        margin-left: 30px;
     }
     
 }
