--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,13 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background-color: #ffffff;
-    opacity: 1;
-    background-image:  linear-gradient(#d5d5d8 1.1px, transparent 1.1px), linear-gradient(to right, #d5d5d8 1.1px, #ffffff 1.1px);
-    background-size: 22px 22px;
+    background:
+    radial-gradient(35.36% 35.36% at 100% 25%,#0000 66%,#eaeaea 68% 70%,#0000 72%) 20px 20px/calc(2*20px) calc(2*20px),
+    radial-gradient(35.36% 35.36% at 0    75%,#0000 66%,#eaeaea 68% 70%,#0000 72%) 20px 20px/calc(2*20px) calc(2*20px),
+    radial-gradient(35.36% 35.36% at 100% 25%,#0000 66%,#eaeaea 68% 70%,#0000 72%) 0 0/calc(2*20px) calc(2*20px),
+    radial-gradient(35.36% 35.36% at 0    75%,#0000 66%,#eaeaea 68% 70%,#0000 72%) 0 0/calc(2*20px) calc(2*20px),
+    repeating-conic-gradient(#ffffff 0 25%,#0000 0 50%) 0 0/calc(2*20px) calc(2*20px),
+    radial-gradient(#0000 66%,#eaeaea 68% 70%,#0000 72%) 0 calc(20px/2)/20px 20px
+    #ffffff;
+
 }
